Altera protótipo para seguir o padrão MVC Adiciona Controller, LoginDB, filtro1, recursos.jsp Modifica o código para que o sistema faça uso do padrão MVC

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -4,7 +4,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<html>
+<html style="background-color: gainsboro">
     <head>
         <title>Bem Vindo</title>
         <meta charset="UTF-8">
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <div>
             <h1 style="text-align:center;">Trabalho do aluno Henrique Cardoso</h1>
-            <p style="text-align:center;"><a href="menujsp.jsp">Voltar para o menu</a></p>
+            <p style="text-align:center;"><a href="Controller?operacao=menu">Voltar para o menu</a></p>
         </div>
     </body>
 </html>
