Refatora código Adiciona captura de erro HTML

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <h1 style="text-align:center;">Trabalho do aluno Henrique Cardoso</h1>
+            <h1 style="text-align:center; color: crimson">Trabalho do aluno Henrique Cardoso</h1>
             <p style="text-align:center;"><a href="Controller?operacao=menu">Voltar para o menu</a></p>
         </div>
     </body>
