Implementa navbar e modifica layout com o Bootstrap

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -7,14 +7,11 @@ and open the template in the editor.
 <html>
     <head>
         <title>Bem Vindo</title>
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class=".container">
+        <div>
             <h1 style="text-align:center; color: crimson">Trabalho do aluno Henrique Cardoso</h1>
             <p style="text-align:center;"><a href="Controller?operacao=menu">Voltar para o menu</a></p>
         </div>
